--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,7 +44,7 @@
         attributes and intent filters the same
         -->
         <activity
-            android:name="co.aospa.launcher.ParanoidLauncher"
+            android:name="com.blaster.launcher.BlasterLauncher"
             android:launchMode="singleTask"
             android:clearTaskOnLaunch="true"
             android:stateNotNeeded="true"
